GNOME Bugzilla – Bug 755042
dashdemux: sidx parsing crashes at end of stream
Last modified: 2015-09-15 19:55:06 UTC
http://dash.edgesuite.net/dash264/TestCases/3b/fraunhofer/aac-lc_stereo_with_video/ElephantsDream/elephants_dream_480p_aaclc_stereo_sidx.mpd Seeking near EOS gives the following, Thiago was looking into that yesterday. ** (lt-playback-test:6279): CRITICAL **: gst_adapter_take_buffer: assertion 'nbytes > 0' failed Program received signal SIGTRAP, Trace/breakpoint trap.
+ Trace 235457
Thread 140736704804608 (LWP 6305)
(gdb) print available $1 = 1440 (gdb) print dash_stream->sidx_current_remaining $2 = 0
Created attachment 311364 [details] [review] dashdemux: fix return when trying to advance in subfragmented stream Even if it doesn't actually advance the subfragment in the default way for streams that have subfragments, it can help the base class to return EOS when there is no more fragments instead of signaling it that it should continue downloading.
Created attachment 311365 [details] [review] adaptivedemux: Only overwrite last return if it was OK Prevents overwriting other conditions that would be more important, such as EOS.
commit 0ed501ab035b7b00124bf8bfbac431413667e9c5 Author: Thiago Santos <thiagoss@osg.samsung.com> Date: Tue Sep 15 10:00:43 2015 -0300 adaptivedemux: Only overwrite last return if it was OK Prevents overwriting other conditions that would be more important, such as EOS. https://bugzilla.gnome.org/show_bug.cgi?id=755042 commit bd710e5e1b3df5c4b4cc9f48fc64478dc33a8ae6 Author: Thiago Santos <thiagoss@osg.samsung.com> Date: Tue Sep 15 09:58:20 2015 -0300 dashdemux: fix return when trying to advance in subfragmented stream Even if it doesn't actually advance the subfragment in the default way for streams that have subfragments, it can help the base class to return EOS when there is no more fragments instead of signaling it that it should continue downloading. https://bugzilla.gnome.org/show_bug.cgi?id=755042